upgrade links to include Rust docs

--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,8 @@
 # betrusted.io SoC
 
-This is the core secure-domain SoC for Betrusted. You can view the latest register set at
-https://ci.betrusted.io/job/betrusted-soc-doc/lastSuccessfulBuild/artifact/build/documentation/_build/html/index.html
+This is the core secure-domain SoC for Betrusted.
+
+Compiled documentation: https://ci.betrusted.io/job/betrusted-soc-doc/lastSuccessfulBuild/artifact/build/documentation/_build/html/index.html[latest register set], https://ci.betrusted.io/job/betrusted-soc-rustdoc/lastSuccessfulBuild/artifact/sw/betrusted-pac/target/riscv32imac-unknown-none-elf/doc/betrusted_pac/index.html[latest Rust API] documentation.
 
 ## Building ##
 
