--- a/README.adoc
+++ b/README.adoc
@@ -15,6 +15,26 @@ Compiled documentation: https://ci.betrusted.io/betrusted-soc/doc/[latest regist
 1. Go to https://www.xilinx.com/member/forms/license-form.html, get a license, and place it in ~/.Xilinx/Xilinx.lic
 1. Run `./betrusted-soc.py` (or `python3 ./betrusted-soc.py`)
 
+There's a lot of options for betrusted-soc.py. The exact command line used to build a Betrusted SoC that is
+compatible with Xous as of April 2021 is:
+
+`./betrusted-soc.py -e blank.nky -u debug -x -s NoTimingRelaxation -r pvt2 -p`
+
+Explanation:
+* `-e blank.nky` forces the creation of an encrypted image using the blank key.
+This means we are always using the decryption pathway to configure an FPGA, even if
+we don't want to burn a key into the device.
+* `-u debug` selects the debug USB PHY. You want this, so you can do firmware updates.
+* `-x` selects the Xous boot configuration
+* `-s NoTimingRelaxation` forces the compiler to exactly meet timing constraints. You can
+probably drop this for a faster compilation time, but we prefer to leave it in for our sanity's sake
+* `-r pvt2` selects the PVT2 version of the hardware. This is the version shipped to CrowdSupply backers
+* `-p` selects physical UART connectivity (as opposed to routing UARTs over wishbone). Physical UARTs
+are currently much faster than wishbone UARTs, although less convenient to use as it requires the debug cable
+to be attached. You can drop this flag and use `wishbone-tool` to do UART debugging over USB, but because
+we are using one USB packet per character, effective baud rate is the *packet rate* of USB, which is maybe
+a couple hundred characters per second at best, and dozens of characters per second on some OSes.
+
 ## Updating ##
 
 To update the repo to the upstream version, including all dependencies, run:
